# roboticarm

./: README.md  eezybotarm.urdf.xacro  package.xml
description/: robot.urdf.xacro
install/: local_setup.sh  setup.sh
install/eezybotarm_control/lib/eezybotarm_control/: arm_controller  arm_controller = eezybotarm_control.arm_controller:mainarm_test_patterns  arm_test_patterns
install/eezybotarm_control/share/eezybotarm_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/eezybotarm_control/share/eezybotarm_control/launch/: arm_bringup.launch.py
log/: latest_build
src/eezybotarm_control/: setup.cfg  setup.py
src/eezybotarm_control/config/: arm.rviz
src/eezybotarm_control/description/: eezybotarm.urdf.xacro
src/eezybotarm_control/eezybotarm_control/: arm_test_patterns.py
src/eezybotarm_control/launch/: arm_bringup.launch.py
